🔥 HOTFIX: Set max width on multicolumn cards to ensure overlap doesn't happen as easily.

--- a/assets/et_multicolumn.css
+++ b/assets/et_multicolumn.css
@@ -199,6 +199,7 @@
 
 .multicolumn-card__info {
   margin: auto;
+  max-width: 100%;
   padding: 2.5rem;
 }
 
